<resources>
    <string name="app_name">HealthCare+</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="user">User?</string>
    <string name="doctor">Doctor?</string>
    <string name="phone_no">Phone No.</string>

    <string-array name="doc_specialization">
        <item>Select Specialization</item>
        <item>Physician</item>
        <item>Dentist</item>
        <item>Dermatologist</item>
        <item>Gynecologist</item>
        <item>Psychiatrist</item>
        <item>Orthopedist</item>
        <item>ENT Specialist</item>
        <item>ENT</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

